@@ -127,7 +127,7 @@
 				</div>
 
 				<div id="game_play_controls">
-					<button id="game_play_button">Play</button>
+					<a id="game_play_button" href=""><button>Play</button></a>
 					<br />
 					Version: <select id="game_play_version"></select>
 					<br />
